[tool.poetry]
authors = ["Joachim Dehli", "Lawrence Akka"]
description = "A package for interacting at a low(ish) level with a Loxone miniserver via the Loxone websocket API"
exclude = ["pyloxone_api/lox_token.cfg"]
homepage = "https://github.com/JoDehli/pyloxone-api"
license = "Apache-2.0"
name = "pyloxone_api"
repository = "https://github.com/JoDehli/pyloxone-api"
version = "0.2.4"
# Trove classifiers for PyPI. Licence and Language are set
# automatically
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Home Automation",
]
readme = "README.md"

[tool.poetry.dependencies]
httpx = "^0.19.0"
pycryptodome = "^3.10.1"
python = "^3.8"
websockets = "^9.0.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
pylint = "^2.8.2"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-httpx = "^0.13.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/JoDehli/pyloxone-api/issues"

[tool.isort]
multi_line_output = 3
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
